bumping datamodel version to 20.76 - updating Contributor affiliations